fix profile picture deformation on mobile

--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -87,6 +87,7 @@
 	overflow: hidden;
 	width: 8rem;
 	height: 8rem;
+	max-width: 8rem;
 	flex-basis: fit-content;
 	flex-shrink: 0;
 }
